Pygame-ctypes 0.07
------------------
 - SDL_INIT_NOPARACHUTE init flag passed
 - Many functions now silently downcast floats to ints (yuk)
 - Added pygame_icon.bmp, missing from previous distribution

SDL-ctypes 0.07
---------------
 - SDL_Surface free'd when pygame.Surface deleted
 - Null callbacks permitted
 - Extra refs for all callbacks kept to prevent unexpected segfaults when
   anonymous functions are collected.
 - None allowed as shape argument to array methods, rather than segfaulting

Pygame-ctypes 0.06
------------------
 - Initial release (version numbering coincides with SDL-ctypes release).

SDL-ctypes 0.06
---------------
 - Python 2.3 support
 - Fixes to SDL_sound
 - Added playsound_simple test
 - Fixed pitch bug in pixels_numpy.py and added event loop
 - Added interop_pil and interop_pil2 tests; demonstrating interoperability
   with PIL.

SDL-ctypes 0.05
---------------
 - Darwin support:
    - locate the SDL framework before passing to ctypes
    - Use RTLD_GLOBAL to workaround ctypes on Panther bug
    - Connect to window manager before SDL_Init(SDL_INIT_VIDEO) 
        - requires PyObjC
 - Added SDL.endian submodule
 - Pitch calculated correctly for returning SDL_Surface.pixels
 - SDL_WM_SetCaption and SDL_WM_GetCaption accept and return Unicode strings.
 - Removed SDL_opengl.h from SDL.constants
 - Added SDL_CreateCursor.
 - Documented struct classes
 - Added SDL_sound (untested)

SDL-ctypes 0.04
---------------
 - Support for 1 bit depth surfaces.
 - Ported all relevant SDL tests.
 - Removed unit/ directory; all tests will reside in test/.
 - Added SDL_GL_GetAttribute
 - Added to_string method in SDL_array
 - Removed read-only check from SDL_PixelFormat
 - Added pixel and bitfield access to SDL_Overlay
 - SDL_Timer allows timer to be disabled by setting the callback to None
 - Implemented SDL_WM_SetIcon
 - Fixed SDL_SetEventFilter callback
 - Fixed SDL_Surface.pixels size to respect pitch rather than width